--- a/Negotiation3/reports/profiles.html
+++ b/Negotiation3/reports/profiles.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="css/bootstrap.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/owl.carousel.css" />
+  <link rel="stylesheet" href="css/owl.theme.default.css" />
   <link rel="stylesheet" href="styles.css" />
 
   <style type="text/css">
@@ -51,88 +53,86 @@
 	  <span class="ion-ios7-arrow-thin-left"></span>&nbsp;SWIPE TO VIEW MORE&nbsp;<span class="ion-ios7-arrow-thin-right"></span>
 	</div>	
 
-  <div id="demo" >
-    <ul>
-      <li class="first dragend-page">
+	<div class="owl-carousel" style="margin: -15px 0px 0px 0px;">
+    	<div class="owl-item">
 		    <div id="clusterGraph" style="margin: 25px auto 5px; width: 280px; height: 160px"></div>
 			<p>We used statistical tools to analyze responses from other negotiators who have taken this test.  In order to make group comparisons, we "normalized" the data. That is, we compared each person's response to the average that we received in our pre-launch survey.</p>
-        <div class="alert alert-info" style="margin:20px">
-          <div class="row">
-            <div class="col-xs-1" style="margin-right:10px">
-              <span data-icon="&#xe571;" style="font-size: 30px"></span>
-            </div>
-            <div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
-              To see what we discovered, swipe to the next page. 
-            </div>
-          </div>
-        </div>
-
-      </li>
-      <li class="dragend-page">
+        	<div class="alert alert-info" style="margin:20px">
+          		<div class="row">
+            		<div class="col-xs-1" style="margin-right:10px">
+              			<span data-icon="&#xe571;" style="font-size: 30px"></span>
+            		</div>
+            		<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">To see what we discovered, swipe to the next page. 
+            		</div>
+          		</div>
+        	</div>
+		</div>
+ 
+   		<div class="owl-item">
 		    <div id="fiveProfiles" style="margin: 25px auto 5px; width: 280px; height: 160px"></div>
 			<p>We found five basic types, each one with a different balance of relative strengths. Some people were closely identified with a particular style, while others were near the boundary between one group and another. In your own dealings, you've likely encountered each one of these types.</p>
-        <div class="alert alert-info" style="margin:20px">
-          <div class="row">
-            <div class="col-xs-1" style="margin-right:10px">
-              <span data-icon="&#xe571;" style="font-size: 30px"></span>
-            </div>
-            <div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
-              To see the five profiles, swipe through to the pages that follow. 
-            </div>
-          </div>
-        </div>
-      </li>
+        	<div class="alert alert-info" style="margin:20px">
+          		<div class="row">
+            		<div class="col-xs-1" style="margin-right:10px">
+              			<span data-icon="&#xe571;" style="font-size: 30px"></span>
+            		</div>
+            		<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">To see the five profiles, swipe through to the pages that follow. 
+            		</div>
+          		</div>
+        	</div>
+      	</div>
 
-      <li class="dragend-page">
+    	<div class="owl-item">
 		    <div id="empatheticValueCreators" style="margin: 25px auto 5px; width: 280px; height: 160px"></div>
 			<p><strong>Empathetic Value-Creators</strong> <i>(30 percent of respondents)</i>. These people have above average confidence about understanding the true needs of their counterparts. They also believe they are good at spotting problem-solving opportunities.</p>
-      <p>On the other hand, they have less confidence about asserting their own interests and maximizing their share of the resulting value.</p>
-      </li>
-      <li class="dragend-page">
-		    <div id="assertiveValueClaimers" style="margin: 25px auto 5px; width: 280px; height: 160px"></div>
+      		<p>On the other hand, they have less confidence about asserting their own interests and maximizing their share of the resulting value.</p>
+      	</div>
+      
+  		<div class="owl-item">
+    		<div id="assertiveValueClaimers" style="margin: 25px auto 5px; width: 280px; height: 160px"></div>
 			<p><strong>Assertive Value-Claimers</strong> <i>(10 percent of respondents)</i>. These people are confident about their ability to advocate their own interests. As a result, they believe that they are able to capture a larger slice of the pie (though there may be less total value to win).</p>
-      <p>This profile is the mirror image of the Empathetic Value-Creators, as confidence about self-advocacy is offset by less assurance about relating to others.</p>
-      </li>
-      <li class="middle dragend-page">
+      		<p>This profile is the mirror image of the Empathetic Value-Creators, as confidence about self-advocacy is offset by less assurance about relating to others.</p>
+      	</div>
+
+    	<div class="owl-item">
 		    <div id="assertiveValueCreators" style="margin: 25px auto 5px; width: 280px; height: 160px"></div>
 			<p><strong>Assertive Value-Creators</strong> <i>(15 percent of respondents)</i>. Like Assertive Value-Claimers, these people are just as confident about their ability to advocate for themselves, but are less certain about the value they obtain.</p>
-      <p>In reality some of them may perform very well, but as psychological "maximizers," no matter how much they get, they tend worry that they should have claimed an even a bigger share of the pie.</p>
-      </li>
-      <li class="dragend-page">
-		    <div id="relationalNegotiatiors" style="margin: 25px auto 5px; width: 280px; height: 160px"></div>
+      		<p>In reality some of them may perform very well, but as psychological "maximizers," no matter how much they get, they tend worry that they should have claimed an even a bigger share of the pie.</p>
+      	</div>
+
+  		<div class="owl-item">
+    		<div id="relationalNegotiatiors" style="margin: 25px auto 5px; width: 280px; height: 160px"></div>
 			<p><strong>Relational Negotiators</strong> <i>(25 percent of respondents)</i>. These people rated themselves strongest at self-advocacy and empathy. Maybe that self-assessment is accurate, though it raises the question of why, given superior relational skills, they don't do better at either creating or claiming value.</p>
-      </li>
-      <li class="dragend-page">
+      	</div>
+
+    	<div class="owl-item">
 		    <div id="outcomeFocusedNegotiatiors" style="margin: 25px auto 5px; width: 280px; height: 160px"></div>
 			<p><strong>Outcome-Focused Negotiators</strong> <i>(20 percent of respondents)</i>. These people rated themselves strongest on both ends of the outcome scale. They may be correct, though it raises a question of how it's possible to attain good results in spite of relational skills that are not as strong.</p>
-      </li>
-      <li class="last dragend-page">
-				<div class="row" style="margin: 50px auto 10px">
-					<div class="col-xs-2" style="margin-right:15px">
-						<span data-icon="&#xe587;" style="font-size: 64px; color: #111"></span>
-					</div>
-					<div class="col-xs-9" style="font-size: 18px; color: #111; font-weight:300; line-height:1.14285714285714">
-						Tap <strong>Back</strong> to see how your personal profile compares to these different groups.
-					</div>
-				</div>
-			</div>
-      </li>
-    </ul>
-  </div>
+      		<div class="alert alert-info" style="margin:20px">
+          		<div class="row">
+            		<div class="col-xs-1" style="margin-right:10px">
+              			<span data-icon="&#xe587;" style="font-size: 30px"></span>
+            		</div>
+            		<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">Tap <strong>Back</strong> to see how your personal profile compares to these different groups.
+            		</div>
+          		</div>
+        	</div>
+		</div>
+
+	</div>
 
   <script type="text/javascript" src="jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="dragend.js"></script>
+  <script type="text/javascript" src="js/owl.carousel.min.js"></script>
 
   <script>
 
-    $(function() {
-      new Dragend($("#demo").get(0), {
-        afterInitialize: function() {
-          $("#demo").css("visibility", "visible");
-        }
-      });
-    });
-
+	$(document).ready(function(){
+	  $(".owl-carousel").owlCarousel({
+		items:1,
+		margin:30
+		});
+	});
+	
   </script>
 
   <script src="highcharts.js"></script>
