--- a/Negotiation3/reports/about.html
+++ b/Negotiation3/reports/about.html
@@ -34,7 +34,13 @@
 
 		<p style="margin: 20px; font-size: 14px;">Great negotiators also are agile. They adjust their approach to the situation at hand and deal effectively with different bargaining styles.</p>
 
-		<p style="margin: 20px; font-size: 14px;"><strong>Negotiation 360&deg;</strong> provides you with a personalized profile of your relational and problem-solving skills. It identifies skills that you can build on and other areas where you can improve. It also highlights key negotiation concepts about creating value and engaging other parties.</p>
+		<p style="margin: 20px; font-size: 14px;"><strong>Negotiation 360&deg;</strong> was developed by Harvard Business School professor and author Michael Wheeler to help you identify skills you can build on, as well as other areas where you can improve. It highlights key negotiation concepts and techniques for creating value, engaging other parties, and learning from experience.</p>
+
+		<p style="margin: 20px; font-size: 14px;">It has three closely linked features. The <strong>Self-assessment</strong> feature prompts you to create a personalized profile that reflects your basic negotiation style. It also introduces you fundamental tensions in negotiation that you must address in formulating strategy.</p>
+
+		<p style="margin: 20px; font-size: 14px;">The <strong>Scorecard</strong> feature enables you to do an after-action-review of every negotiation you undertake, large or small. It enables you to draw the right lessons from your own on-going experience.</p>
+				
+		<p style="margin: 20px; font-size: 14px;">And then, preparing for your next negotiation, always consult the third feature, <strong>My best practices</strong>. It compiles what you’ve learned from prior experience so that you can continue to enhance your strategic and interpersonal skills. Remember to consult the Resource section, as well, that points you to other sources of valuable negotiation advice.</p>
 
 	</div>
 		 
