--- a/Negotiation3/reports/scorecard-intro.html
+++ b/Negotiation3/reports/scorecard-intro.html
@@ -9,7 +9,7 @@
             margin: 10px;
         }
         body {
-            background-image:url("top-banner-6.png");
+            background-image:url("top-banner-11.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
@@ -18,15 +18,15 @@
 </head>
 <body>
 	<div align="center">
-        <img src="image-6.png" width="115px" height="115px" class="img-circle">
+        <img src="image-11.png" width="115px" height="115px" class="img-circle">
 	</div>
     
 	<div>
-		<p style="margin: 15px 20px 20px 20px; font-size: 14px;">Learning the right lessons from your negotiation experience will enhance your strategic agility and polish your interpersonal skills. The following questions will sharpen your analysis while your impressions are still sharp.</p>
+		<p style="margin: 15px 20px 20px 20px; font-size: 14px;">Learning the right lessons from your negotiation experience will enhance your strategic agility and polish your interpersonal skills. Your after-action-review won't take long, but the payoff can be huge. The following questions will sharpen your analysis. Address them while your impressions are still sharp.</p>
 
-		<p style="margin: 20px; font-size: 14px;">Focus your answers on the negotiation process - <i>what you did and said</i> - not the outcome. Perhaps you were lucky and got a great result because the other party was desperate for a deal. In another case, maybe you walked away empty-handed yet doing but that was best anybody could do under the circumstances. Just assess those things that were under your control.</p>
+		<p style="margin: 20px; font-size: 14px;">Focus your answers on the negotiation process-what you did and said-not the outcome. Perhaps you were lucky and got a great result because the other party was desperate for a deal. In another case, maybe you walked away empty-handed, but that was best anybody could do under the circumstances. In short, just assess those things that were under your control.</p>
 
-		<p style="margin: 20px; font-size: 14px;">Don't be overly self-critical or engage in 20/20 hindsight. Make sure you note what you did well, not simply areas where you wish you did better. Start by jotting down some basic information about this particular negotiation, so you can easily review your scorecard later. After that, you'll have the chance to review how you managed various aspects of the process.</p>
+		<p style="margin: 20px; font-size: 14px;">Don't be overly self-critical or engage in 20-20 hindsight. Make sure you note what you did well, not simply areas where you wish you did better. Start by jotting down some basic information about this particular negotiation, so you can easily review your scorecard later. Then you'll be asked to review how you managed various aspects of the process.</p>
 
 	</div>
 		 
