--- a/Negotiation3/reports/scorecard-profile.html
+++ b/Negotiation3/reports/scorecard-profile.html
@@ -47,7 +47,7 @@
 
 		<ol style="margin: 20px 20px 20px 40px; font-size: 14px;">
 			<li>You may be more effective negotiating with certain types of people than with others.</li><br>
-			<li>Likewise, it may depend on the situation. You may be stronger negotiating on behalf of your organization than advocating for yourself.</li><br>
+			<li>Likewise, it may depend on the situation. Perhaps you're stronger negotiating on behalf of your organization than advocating for yourself.</li><br>
 			<li>Finally, these scorecard questions were somewhat different from those in the self-assessment. Here you were free to score yourself on each skill independently without making tradeoffs for the other items.</li>
 		</ol>
 		
@@ -59,7 +59,7 @@
 				<span data-icon="&#xe030;" style="font-size: 24px"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
-				Take a moment to review your answers, plus your scorecard profile, and reflect more broadly about how this negotiation unfolded. When you're done, continue on to the next section.
+				Take a moment to review your answers, plus your scorecard profile, and reflect more broadly about how this negotiation unfolded. When you’re done, continue on to the next section.
 			</div>
 		</div>
 	</div>
