--- a/Negotiation3/reports/scorecard-summary.html
+++ b/Negotiation3/reports/scorecard-summary.html
@@ -9,7 +9,7 @@
             margin: 10px;
         }
         body {
-            background-image:url("top-banner-6.png");
+            background-image:url("top-banner-14.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
@@ -18,19 +18,13 @@
 </head>
 <body>
 	<div align="center">
-        <img src="image-6.png" width="115px" height="115px" class="img-circle">
+        <img src="image-14.png" width="115px" height="115px" class="img-circle">
 	</div>
     
 	<div>
-		<p style="margin: 15px 20px 20px 20px; font-size: 14px;">Negotiation 360&deg; will archive your scorecard for this negotiation and others that you will undertake. Also, the MY BEST PRACTICES section will compile your growing list of WWW and WWYDD take-aways. Be sure to consult that resource before your next negotiation. It will enable you to get the most out what you learn from experience and reflection.</p>
+		<p style="margin: 15px 20px 20px 20px; font-size: 14px;">Negotiation 360&deg; will archive your scorecard for this negotiation and others that you will undertake. Also, the <b>MY BEST PRACTICES</b> section will compile your growing list of WWW and WWYDD take-aways. Be sure to consult that resource before your next negotiation. It will enable you to get the most out what you learn from experience and reflection.</p>
 
-		<p style="margin: 20px; font-size: 14px;">Make on-going learning a habit. Put a weekly reminder in your calendar to review the most interesting and instructive negotiation you undertake in the coming days. Keeping score on a regular basis only takes a few minutes, but the payoff can be tremendous. Building a personalized list of best practices will help you:</p>
-
-		<ul style="margin: 20px 20px 20px 0px; font-size: 14px;">
-			<li>reach agreements that might otherwise slip through your fingers</li>
-			<li>generate (and capture) value through creative problem-solving</li>
-			<li>resolve small disputes before they escalate into costly conflicts</li>
-		</ul>
+		<p style="margin: 20px; font-size: 14px;">Make on-going learning a habit. Put a weekly reminder in your calendar to review the most interesting and instructive negotiation you undertake in the coming days. Keeping score on a regular basis only takes a few minutes, but the rewards can be tremendous.</p>
 
 	</div>
 		 
