Lessons learned html with 4 input values

--- a/Negotiation3/reports/scorecard-lessons2.html
+++ b/Negotiation3/reports/scorecard-lessons2.html
@@ -20,15 +20,28 @@
 	<div align="center">
         <img src="image-12.png" width="115px" height="115px" class="img-circle">
 	</div>
+    <div style="margin:-40px 20px 20px 20px">
+		<h4 style="font-weight:400">Part 1</h4>
+	</div>
     
 	<div>
-		<p style="margin: 15px 20px 20px 20px; font-size: 14px;">To learn from experience you must identify those decisions and actions that worked well for you, or that were unsuccessful. My colleagues at the Program on Negotiation created the acronyms <b>WWW</b> (what-worked-well) and <b>WWYDD</b> (what-would-you-do-differently) to stimulate self-reflection. They're essential for any after-action review, especially so for negotiation.</p>
+		<p style="margin: 15px 20px 20px 20px; font-size: 16px;"><strong>What worked well?</strong></p>
 
-		<p style="margin: 20px; font-size: 14px;">The more specific your answer, the more useful it will be in the future. Instead of merely saying, "I effectively asserted my interests," state how you did it. (For example, you could add ". . . by demonstrating my strong walk-away option."</p>
+		<p style="margin: 20px; font-size: 14px;">"%@"</p>
 
-		<p style="margin: 20px; font-size: 14px;">For What-worked-well lessons, look first at those areas where you may have done better than usual. For what-would you differently, think about areas where you may have underperformed. Also review you your negotiation strategy and tactics broadly, not just the four skills you just evaluated. </p>
+		<p style="margin: 20px; font-size: 14px;">"%@"</p>
 
-		<p style="margin: 20px; font-size: 14px;">Writing about what-worked-well, for example, you might note, "Meeting at their office gave me a better sense of his company than if I insisted on negotiating at my place." For what-you-would-do-differently, you might say, "I should have sought competing bids before renegotiating with our incumbent supplier."</p>
+	</div>
+    <div style="margin:15px 20px 20px 20px">
+		<h4 style="font-weight:400">Part 2</h4>
+	</div>
+    
+	<div>
+		<p style="margin: 15px 20px 20px 20px; font-size: 16px;"><strong>What would you do differently?</strong></p>
+
+		<p style="margin: 20px; font-size: 14px;">"%@"</p>
+
+		<p style="margin: 20px; font-size: 14px;">"%@"</p>
 
 	</div>
 		 
