--- a/Negotiation3/reports/scorecard-results.html
+++ b/Negotiation3/reports/scorecard-results.html
@@ -1,52 +1,46 @@
-<!doctype html>
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<link rel="stylesheet" href="css/bootstrap.css" />
-	<link rel="stylesheet" href="css/style.css" />
-</head>
-<body>
-	
-	<div class="alert alert-info" style="margin: 10px auto 10px; width: 280px; height: 200px; max-height: 200px;">
-		<div class="row">
-			<div class="col-xs-7" style="margin-right:10px">
-				<span style="font-weight:400; font-size: 14px">Agreement Reached:</span>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<html>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+            <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+                <link rel="stylesheet" href="css/style.css" type="text/css">
+                    <title></title>
+                    </head>
+	<body>
+		<div class="alert alert-info" style="margin: 10px auto 10px; width: 280px; height: 200px; max-height: 200px;">
+			<div class="row">
+				<div class="col-xs-7" style="margin-right:10px">
+					<span style="font-weight:400; font-size: 14px">Agreement Reached:</span>
+				</div>
+				<div class="col-xs-3" style="font-size: 14px; line-height:1.14285714285714">
+					%@
+				</div>
+			</div><br>
+			<div class="row">
+				<div class="col-xs-1" style="margin-right:10px">
+					<span style="font-weight:400; font-size: 14px">Type:</span>
+				</div>
+				<div class="col-xs-10" style="font-size: 14px; line-height:1.14285714285714">
+					%@
+				</div>
+			</div><br>
+			<div class="row">
+				<div class="col-xs-7" style="margin-right:10px">
+					<span style="font-weight:400; font-size: 14px">Importance:</span>
+				</div>
+				<div class="col-xs-3" style="font-size: 14px; line-height:1.14285714285714">
+					%@
+				</div>
+			</div><br>
+			<div class="row">
+				<div class="col-xs-7" style="margin-right:10px">
+					<span style="font-weight:400; font-size: 14px">Satisfaction:</span>
+				</div>
+				<div class="col-xs-3" style="font-size: 14px; line-height:1.14285714285714">
+					%@
+				</div>
 			</div>
-			<div class="col-xs-3" style="font-size: 14px; line-height:1.14285714285714">
-				%@ 
-			</div>
-		</div>
-<br>
-		<div class="row">
-			<div class="col-xs-1" style="margin-right:10px">
-				<span style="font-weight:400; font-size: 14px">Type:</span>
-			</div>
-			<div class="col-xs-10" style="font-size: 14px; line-height:1.14285714285714">
-				%@ 
-			</div>
-		</div>
-<br>
-		<div class="row">
-			<div class="col-xs-7" style="margin-right:10px">
-				<span style="font-weight:400; font-size: 14px">Importance:</span>
-			</div>
-			<div class="col-xs-3" style="font-size: 14px; line-height:1.14285714285714">
-				%@ 
-			</div>
-		</div>
-<br>
-		<div class="row">
-			<div class="col-xs-7" style="margin-right:10px">
-				<span style="font-weight:400; font-size: 14px">Satisfaction:</span>
-			</div>
-			<div class="col-xs-3" style="font-size: 14px; line-height:1.14285714285714">
-				%@ 
-			</div>
-		</div>
-
-
-	</div> 
-		
-			
-    <script src="jquery.js"></script>
-</body>
+		</div><script src="jquery.js" type="text/javascript">
+            </script>
+	</body>
 </html>
