--- a/Negotiation3/reports/scorecard-profile.html
+++ b/Negotiation3/reports/scorecard-profile.html
@@ -155,7 +155,7 @@
 	                duration: 1000
 	            }, 
 	        },	{
-		            name: '%@',
+		            name: 'test',
 		            type: 'area',
 		            data: [%@, %@, %@, %@],
 					lineWidth: 5,
