scorecard profile html edits

--- a/Negotiation3/reports/scorecard-profile.html
+++ b/Negotiation3/reports/scorecard-profile.html
@@ -147,7 +147,7 @@
 	        },
 
 	        series: [{
-	            name: 'Your Responses',
+	            name: 'Your Profile',
 	            type: 'area',
 	            data: [%@, %@, %@, %@],
 				lineWidth: 5,
@@ -155,7 +155,7 @@
 	                duration: 1000
 	            }, 
 	        },	{
-		            name: '%@',
+		            name: 'Your Scorecard Performance',
 		            type: 'area',
 		            data: [%@, %@, %@, %@],
 					lineWidth: 5,
