--- a/Negotiation3/reports/scorecard-results.html
+++ b/Negotiation3/reports/scorecard-results.html
@@ -11,11 +11,11 @@
 </head>
 	<body>
 		<div class="alert alert-info" style="margin: 10px auto 10px; width: 280px; height: 200px; max-height: 200px;">
-			<div class="row">
+			<div class="row" style="margin-top:-10px">
 				<div class="col-xs-7" style="margin-right:10px">
 					<span style="font-weight:400; font-size: 14px">Agreement Reached:</span>
 				</div>
-				<div class="col-xs-3" style="font-weight:800; font-size: 14px; line-height:1.14285714285714">
+				<div class="col-xs-4" style="font-weight:800; font-size: 14px; line-height:1.14285714285714">
 					%@
 				</div>
 			</div>
