Styling on text fields on lessons learned quiz items

--- a/Negotiation3/reports/scorecard-lessons2.html
+++ b/Negotiation3/reports/scorecard-lessons2.html
@@ -20,28 +20,21 @@
 	<div align="center">
         <img src="image-12.png" width="115px" height="115px" class="img-circle">
 	</div>
-    <div style="margin:-40px 20px 20px 20px">
-		<h4 style="font-weight:400">Part 1</h4>
-	</div>
     
 	<div>
 		<p style="margin: 15px 20px 20px 20px; font-size: 16px;"><strong>What worked well?</strong></p>
 
-		<p style="margin: 20px; font-size: 14px;">"%@"</p>
+		<p style="margin: 20px; font-size: 14px;">&ldquo; %@ &rdquo;</p>
 
-		<p style="margin: 20px; font-size: 14px;">"%@"</p>
+		<p style="margin: 20px; font-size: 14px;">&ldquo; %@ &rdquo;</p>
 
 	</div>
-    <div style="margin:15px 20px 20px 20px">
-		<h4 style="font-weight:400">Part 2</h4>
-	</div>
-    
 	<div>
 		<p style="margin: 15px 20px 20px 20px; font-size: 16px;"><strong>What would you do differently?</strong></p>
 
-		<p style="margin: 20px; font-size: 14px;">"%@"</p>
+		<p style="margin: 20px; font-size: 14px;">&ldquo; %@ &rdquo;</p>
 
-		<p style="margin: 20px; font-size: 14px;">"%@"</p>
+		<p style="margin: 20px; font-size: 14px;">&ldquo; %@ &rdquo;</p>
 
 	</div>
 		 
