Styling changes in scorecard title, lessons learned

--- a/Negotiation3/reports/scorecard-lessons2.html
+++ b/Negotiation3/reports/scorecard-lessons2.html
@@ -21,21 +21,28 @@
         <img src="image-12.png" width="115px" height="115px" class="img-circle">
 	</div>
     
+    
+	<div>
+		<p style="margin: 15px 20px 20px 20px; font-size: 16px;"><strong>Negotiation Name</strong>: %@</p>
+
+		<p style="margin: 20px; font-size: 14px;">Scorecard created %@</p>
+
+	</div>
+
 	<div>
 		<p style="margin: 15px 20px 20px 20px; font-size: 16px;"><strong>What worked well?</strong></p>
 
 		<p style="margin: 20px; font-size: 14px;">&ldquo; %@ &rdquo;</p>
 
 		<p style="margin: 20px; font-size: 14px;">&ldquo; %@ &rdquo;</p>
-
 	</div>
+
 	<div>
 		<p style="margin: 15px 20px 20px 20px; font-size: 16px;"><strong>What would you do differently?</strong></p>
 
 		<p style="margin: 20px; font-size: 14px;">&ldquo; %@ &rdquo;</p>
 
 		<p style="margin: 20px; font-size: 14px;">&ldquo; %@ &rdquo;</p>
-
 	</div>
 		 
 <!--			
