styling edits on lessons learned 2

--- a/Negotiation3/reports/scorecard-lessons2.html
+++ b/Negotiation3/reports/scorecard-lessons2.html
@@ -23,28 +23,23 @@
     
     
 	<div>
-		<p style="margin: 15px 20px 20px 20px; font-size: 16px;"><strong>Negotiation Name</strong>: %@</p>
+		<p style="margin: 15px 20px 5px 20px; font-size: 16px;"><strong>Negotiation Name</strong>: %@</p>
 
-		<p style="margin: 20px; font-size: 14px;">Scorecard created %@</p>
+		<p style="margin: 5px 20px 20px 20px; font-size: 14px;">Scorecard created %@</p>
 
-	</div>
-
-	<div>
-		<p style="margin: 15px 20px 20px 20px; font-size: 16px;"><strong>What worked well?</strong></p>
-
-		<p style="margin: 20px; font-size: 14px;">&ldquo; %@ &rdquo;</p>
-
-		<p style="margin: 20px; font-size: 14px;">&ldquo; %@ &rdquo;</p>
-	</div>
-
-	<div>
-		<p style="margin: 15px 20px 20px 20px; font-size: 16px;"><strong>What would you do differently?</strong></p>
-
-		<p style="margin: 20px; font-size: 14px;">&ldquo; %@ &rdquo;</p>
-
-		<p style="margin: 20px; font-size: 14px;">&ldquo; %@ &rdquo;</p>
 	</div>
 		 
+	<div>
+		<ul class="list-group" >
+		  <li class="list-group-item" style="font-size: 14px; text-align: left"><strong>What Worked Well?</strong></li>
+		  <li class="list-group-item" style="font-size: 14px; text-align: left">&ldquo; %@ &rdquo;</li>
+		  <li class="list-group-item" style="font-size: 14px; text-align: left">&ldquo; %@ &rdquo;</li>
+		  <li class="list-group-item" style="font-size: 14px; text-align: left"><strong>What Would I Do Differently?</strong></li>
+		  <li class="list-group-item" style="font-size: 14px; text-align: left">&ldquo; %@ &rdquo;</li>
+		  <li class="list-group-item" style="font-size: 14px; text-align: left">&ldquo; %@ &rdquo;</li>
+		</ul>
+	</div>		
+		
 <!--			
 	<div class="alert alert-info" style="margin:20px">
 		<div class="row">
