--- a/Negotiation3/reports/practices-summary.html
+++ b/Negotiation3/reports/practices-summary.html
@@ -1,52 +1,90 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html>
-	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-            <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-            <link rel="stylesheet" href="css/style.css" type="text/css">
-			<link href="css/jquery.circliful.css" rel="stylesheet" type="text/css" />
+<!doctype html>
+<head>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="stylesheet" href="css/bootstrap.css" />
+  <link rel="stylesheet" href="css/style.css" />
 
-<title></title>
+  <style type="text/css">
+
+    * {
+      padding: 0;
+      margin: 0;
+      border: 0;
+    }
+
+    body {
+	  background: #fff;
+      font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+
+    #demo {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      visibility: hidden;
+      cursor: hand;
+      cursor: -moz-grab;
+      cursor: -webkit-grab;
+      cursor: grab;
+    }
+
+    #demo p {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 0 20px;
+      margin-bottom: 15px;
+    }
+
+  </style>
+
+    
 </head>
-	<body>
-		<div class="alert alert-info" style="margin: 10px auto 10px; width: 280px; height: 200px; max-height: 200px;">
-			<div class="row" style="margin-top:-10px">
-				<div class="col-xs-7" style="margin-right:10px">
-					<span style="font-weight:400; font-size: 14px">Agreement Reached:</span>
-				</div>
-				<div class="col-xs-4" style="font-weight:800; font-size: 14px; line-height:1.14285714285714">
-					%@
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-1" style="margin-right:10px">
-					<span style="font-weight:400; font-size: 14px">Type:</span>
-				</div>
-				<div class="col-xs-10" style="font-size: 14px; line-height:1.14285714285714">
-					%@
-				</div>
-			</div><br>
-			<div class="row">
-				<div class="col-xs-6" style="margin-left:15px">
-					<div id="importance" data-dimension="80" data-text="%@" data-width="10" data-fontsize="20" data-percent="%@" data-fgcolor="#ff9f33" data-bgcolor="#eee"></div>
-					<span style="font-weight:400; font-size: 14px; margin-left:5px">Importance</span>
-				</div>
-				<div class="col-xs-5" style="font-size: 14px; line-height:1.14285714285714">
-					<div id="satisfaction" data-dimension="80" data-text="%@" data-width="10" data-fontsize="20" data-percent="%@" data-fgcolor="#ff9f33" data-bgcolor="#eee"></div>
-					<span style="font-weight:400; font-size: 14px; margin-left:5px">Satisfaction</span>
-				</div>
-			</div><br>
-		</div>
-				
-		<script src="jquery.js" type="text/javascript"></script>
-		<script src="jquery.circliful.min.js"></script>
-		<script>
-		$( document ).ready(function() {
-				$('#importance').circliful();
-				$('#satisfaction').circliful();
-		    });
-		</script>
-		
-	</body>
+<body>
+    <div id="container" style="margin: 10px auto 10px; width: 280px; height: 200px; max-height: 200px;"></div>
+    <script src="jquery.js"></script>
+    <script src="highcharts.js"></script>
+    <script src="highcharts-more.js"></script>
+    <script src="modules/exporting.js"></script>
+    <script src="minimal.js"></script>
+
+    <script>
+	$(function () {
+
+	    $(document).ready(function () {
+
+	        // Build the chart
+	        $('#container').highcharts({
+	            title: {
+	                text: 'Agreement Rate'
+	            },
+	            tooltip: {
+	                pointFormat: '<b>{point.percentage:.1f}%</b>'
+	            },
+	            plotOptions: {
+	                pie: {
+	                    allowPointSelect: true,
+	                    cursor: 'pointer',
+	                    dataLabels: {
+	                        enabled: false
+	                    },
+	                    showInLegend: true
+	                }
+	            },
+	            series: [{
+	                type: 'pie',
+	                data: [
+	                    ['Yes', 4],
+	                    ['No', 2],
+	                    ['Not yet', 1]
+	                ]
+	            }]
+	        });
+	    });
+
+	});
+    </script>
+</body>
 </html>
