--- a/Negotiation3/reports/practices-www.html
+++ b/Negotiation3/reports/practices-www.html
@@ -26,6 +26,7 @@
 		<p style="margin: 15px 20px 20px 20px; font-size: 14px;">What Worked Well?</p>
 	</div>
 		 
+	<!-- loop the following list group from newest to oldest scorecard data for what what worked well -->
 	<div>
 		<ul class="list-group" >
 		  <li class="list-group-item" style="font-size: 14px; text-align: left"><strong>Negotiation Name:</strong>%@<br><strong>Date:</strong> %@<br><strong>Agreement Reached:</strong> %@</li>
