best practices html edits

--- a/Negotiation3/reports/practices-intro.html
+++ b/Negotiation3/reports/practices-intro.html
@@ -43,7 +43,7 @@
 				<span data-icon="&#xe032;" style="font-size: 24px"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; font-size: 14px; line-height:1.14285714285714">
-				To take full advantage of the app, periodically review the kinds of negotiations you engage in, how important they are, and how you feel you’ve performed. Look for general patterns and trends. 
+				To take full advantage of the app, periodically review the kinds of negotiations you engage in, how important they are, and how you feel you've performed. Look for general patterns and trends. 
 			</div>
 		</div>
 	</div>
