--- a/Negotiation3/reports/practices-wwidd.html
+++ b/Negotiation3/reports/practices-wwidd.html
@@ -21,9 +21,8 @@
         <img src="image-8.png" width="115px" height="115px" class="img-circle">
 	</div>
     
-    
-	<div>
-		<p style="margin: 15px 20px 20px 20px; font-size: 14px;">What Would I Do Differently?</p>
+  	<div>
+		<h4 style="margin: 15px 20px 20px 20px; font-weight: 400;">What Would I Do Differently?</p>
 	</div>
 	
 	<!-- loop the following list group from newest to oldest scorecard data for what would i do differently -->	 
