--- a/Negotiation3/reports/practices-performance.html
+++ b/Negotiation3/reports/practices-performance.html
@@ -170,16 +170,12 @@
 	            text: 'Recent Scorecards'
 	        },
 	        yAxis: {
-	            title: null
+	            title: null,
+				max: 100,
+				tickInterval: 25
 	        },
 	        xAxis: {
-	            categories: [
-	                '10/10',
-	                '10/12',
-	                '10/14',
-	                '10/16',
-	                '10/19',
-	            ]
+	            categories: ['10/10','10/12','10/14','10/16','10/19']
 	        },
 	        tooltip: {
 	            headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
@@ -203,11 +199,10 @@
 			},
 	        series: [{
 	            name: 'Importance',
-	            data: [49.9, 71.5, 16.4, 29.2, 44.0]
-
+	            data: [49.9, 11.5, 16.4, 29.2, 44.0]
 	        }, {
 	            name: 'Satisfaction',
-	            data: [83.6, 78.8, 93.5, 93.4, 16.0]
+	            data: [43.6, 38.8, 23.5, 23.4, 16.0]
 
 	        }]
 	    });
@@ -222,7 +217,9 @@
 	            text: 'Recent Scorecards'
 	        },
 	        yAxis: {
-	            title: null
+	            title: null,
+				max: 5,
+				tickInterval: 1
 	        },
 	        xAxis: {
 	            categories: ['Creating Value', 'Empathy', 'Claiming Value', 'Assert'],
