Edits to practices-performance.html

--- a/Negotiation3/reports/practices-performance.html
+++ b/Negotiation3/reports/practices-performance.html
@@ -149,8 +149,8 @@
 	            series: [{
 	                type: 'pie',
 	                data: [
-	                    ['Prof (Outside)', 2],
-	                    ['Prof (Inside)', 2],
+	                    ['Prof. (Outside)', 2],
+	                    ['Prof. (Inside)', 2],
 	                    ['Personal', 1],
 	                    ['Community', 2],
 	                    ['Family', 0]
