--- a/Negotiation3/reports/practices-summary.html
+++ b/Negotiation3/reports/practices-summary.html
@@ -76,9 +76,9 @@
 	            series: [{
 	                type: 'pie',
 	                data: [
-	                    ['Yes', 4],
-	                    ['No', 2],
-	                    ['Not yet', 1]
+	                    ['Yes', %li],
+	                    ['No', %li],
+	                    ['Not yet', %li]
 	                ]
 	            }]
 	        });
