Added images for Best Practices

--- a/Negotiation3/reports/practices-summary.html
+++ b/Negotiation3/reports/practices-summary.html
@@ -73,6 +73,12 @@
 	                    showInLegend: true
 	                }
 	            },
+				credits: {
+				      enabled: false
+				},
+				exporting: { 
+						enabled: false 
+				},
 	            series: [{
 	                type: 'pie',
 	                data: [
